--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@ checkpoints/*.pth
 checkpoints/*.csv
 checkpoints/*00.jpg
 data/Stanford_Online_Products/
-data/DeepInshop/
+data/DeepInShop/
+data/cub200_2011/
+data/Stanford_Online_Products/
+data/CUB_200_2011/
 *.npy
 *.csv
 .ipynb_checkpoints/
