a statble margin ebay and cub200

--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,14 @@
 checkpoints/*.pth
 checkpoints/*.csv
 checkpoints/*00.jpg
-data/Stanford_Online_Products/
-data/DeepInShop/
-data/cub200_2011/
-data/Stanford_Online_Products/
-data/CUB_200_2011/
+data/Stanford_Online_Products
+data/DeepInShop
+data/cub200_2011
+data/Stanford_Online_Products
+data/CUB_200_2011
 *.npy
 *.csv
 .ipynb_checkpoints/
 __pycache__/
 *.pyc
+*.params
